+ Added: Option to toggle land storage
  # If enabled, allows land members to store items in the /lands storage command.
  # The storage can also be accessed by clicking on the land mainblock's barrel.
  # WARNING: If you disable this option, all items in all land storages will be deleted.
  storage: true