@@ -921,8 +921,7 @@ database:
 
     # It is highly recommended to set a unique table prefix if the plugin shares a database with other plugins or Lands instances.
     table-prefix: 'lands_'
-    # Server name
-    server-name: ''
+
 
   # You can also use SQLite. It will run out of the box.
   sqlite: true
