@@ -73,7 +73,7 @@ gui:
         edit:
           image: 'default'
           slot: 7
-        mainblock_reposition:
+        mainblock:
           image: 'default'
           slot: 8
         mainblock_set:
@@ -84,6 +84,15 @@ gui:
           members:
             image: 'ref:player-management'
             slot: 2
+
+  land_mainblock:
+    items:
+      default:
+        hologram:
+          slot: 1
+        reposition:
+          slot: 2
+
   land_settings:
     items:
       default:
