@@ -3,3 +3,10 @@
   # The storage can also be accessed by clicking on the land mainblock's barrel.
   # WARNING: If you disable this option, all items in all land storages will be deleted.
   storage: true
+
+
++ Added: Land's can now toggle the mainblock hologram
+You may want to update this item in the GUI file:
+        mainblock_reposition:
+          name: '&c&lEdit Mainblock'
+          lore: '&8✖ &bLEFT CLICK[newline]   &7Remove or reposition the mainblock.[newline]    &8• &7Placing it again costs:&c {cost}[newline]&8✖ &9RIGHT CLICK[newline]   &7Toggle the hologram: {hologram}'
